// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./antdv-demo/docs/descriptions/demo/basic.md correctly 1`] = `
<div class="ant-descriptions">
  <div class="ant-descriptions-title">User Info</div>
  <div class="ant-descriptions-view">
    <table>
      <tbody>
        <tr class="ant-descriptions-row">
          <td colspan="1" class="ant-descriptions-item"><span class="ant-descriptions-item-label">UserName</span><span class="ant-descriptions-item-content">Zhou Maomao</span></td>
          <td colspan="1" class="ant-descriptions-item"><span class="ant-descriptions-item-label">Telephone</span><span class="ant-descriptions-item-content">1810000000</span></td>
          <td colspan="1" class="ant-descriptions-item"><span class="ant-descriptions-item-label">Live</span><span class="ant-descriptions-item-content">Hangzhou, Zhejiang</span></td>
        </tr>
        <tr class="ant-descriptions-row">
          <td colspan="1" class="ant-descriptions-item"><span class="ant-descriptions-item-label">Remark</span><span class="ant-descriptions-item-content">empty</span></td>
          <td colspan="2" class="ant-descriptions-item"><span class="ant-descriptions-item-label">Address</span><span class="ant-descriptions-item-content">
    No. 18, Wantang Road, Xihu District, Hangzhou, Zhejiang, China
  </span></td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders ./antdv-demo/docs/descriptions/demo/border.md correctly 1`] = `
<div class="ant-descriptions ant-descriptions-bordered">
  <div class="ant-descriptions-title">User Info</div>
  <div class="ant-descriptions-view">
    <table>
      <tbody>
        <tr class="ant-descriptions-row">
          <th colspan="1" class="ant-descriptions-item-label">Product</th>
          <td colspan="1" class="ant-descriptions-item-content">Cloud Database</td>
          <th colspan="1" class="ant-descriptions-item-label">Billing Mode</th>
          <td colspan="1" class="ant-descriptions-item-content">Prepaid</td>
          <th colspan="1" class="ant-descriptions-item-label">Automatic Renewal</th>
          <td colspan="1" class="ant-descriptions-item-content">YES</td>
        </tr>
        <tr class="ant-descriptions-row">
          <th colspan="1" class="ant-descriptions-item-label">Order time</th>
          <td colspan="1" class="ant-descriptions-item-content">2018-04-24 18:00:00</td>
          <th colspan="1" class="ant-descriptions-item-label">Usage Time</th>
          <td colspan="3" class="ant-descriptions-item-content">
            2019-04-24 18:00:00
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th colspan="1" class="ant-descriptions-item-label">Status</th>
          <td colspan="5" class="ant-descriptions-item-content"><span class="ant-badge ant-badge-status ant-badge-not-a-wrapper"><span class="ant-badge-status-dot ant-badge-status-processing"></span><span class="ant-badge-status-text">Running</span></span></td>
        </tr>
        <tr class="ant-descriptions-row">
          <th colspan="1" class="ant-descriptions-item-label">Negotiated Amount</th>
          <td colspan="1" class="ant-descriptions-item-content">$80.00</td>
          <th colspan="1" class="ant-descriptions-item-label">Discount</th>
          <td colspan="1" class="ant-descriptions-item-content">$20.00</td>
          <th colspan="1" class="ant-descriptions-item-label">Official Receipts</th>
          <td colspan="1" class="ant-descriptions-item-content">$60.00</td>
        </tr>
        <tr class="ant-descriptions-row">
          <th colspan="1" class="ant-descriptions-item-label">Config Info</th>
          <td colspan="5" class="ant-descriptions-item-content">
            Data disk type: MongoDB
            <br>
            Database version: 3.4
            <br>
            Package: dds.mongo.mid
            <br>
            Storage space: 10 GB
            <br>
            Replication factor: 3
            <br>
            Region: East China 1<br></td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders ./antdv-demo/docs/descriptions/demo/responsive.md correctly 1`] = `
<div>
  <div class="ant-descriptions ant-descriptions-bordered">
    <div class="ant-descriptions-title">Responsive Descriptions</div>
    <div class="ant-descriptions-view">
      <table>
        <tbody>
          <tr class="ant-descriptions-row">
            <th colspan="1" class="ant-descriptions-item-label">Product</th>
            <td colspan="1" class="ant-descriptions-item-content">Cloud Database</td>
            <th colspan="1" class="ant-descriptions-item-label">Billing</th>
            <td colspan="1" class="ant-descriptions-item-content">Prepaid</td>
            <th colspan="1" class="ant-descriptions-item-label">Time</th>
            <td colspan="1" class="ant-descriptions-item-content">18:00:00</td>
          </tr>
          <tr class="ant-descriptions-row">
            <th colspan="1" class="ant-descriptions-item-label">Amount</th>
            <td colspan="1" class="ant-descriptions-item-content">$80.00</td>
            <th colspan="1" class="ant-descriptions-item-label">Discount</th>
            <td colspan="1" class="ant-descriptions-item-content">$20.00</td>
            <th colspan="1" class="ant-descriptions-item-label">Official</th>
            <td colspan="1" class="ant-descriptions-item-content">$60.00</td>
          </tr>
          <tr class="ant-descriptions-row">
            <th colspan="1" class="ant-descriptions-item-label">Config Info</th>
            <td colspan="5" class="ant-descriptions-item-content">
              Data disk type: MongoDB
              <br>
              Database version: 3.4
              <br>
              Package: dds.mongo.mid
              <br>
              Storage space: 10 GB
              <br>
              Replication factor: 3
              <br>
              Region: East China 1
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`renders ./antdv-demo/docs/descriptions/demo/size.md correctly 1`] = `
<div>
  <div class="ant-radio-group ant-radio-group-outline ant-radio-group-default"><label class="ant-radio-wrapper ant-radio-wrapper-checked"><span class="ant-radio ant-radio-checked"><input type="radio" class="ant-radio-input" value="default"><span class="ant-radio-inner"></span></span><span>default</span></label><label class="ant-radio-wrapper"><span class="ant-radio"><input type="radio" class="ant-radio-input" value="middle"><span class="ant-radio-inner"></span></span><span>middle</span></label><label class="ant-radio-wrapper"><span class="ant-radio"><input type="radio" class="ant-radio-input" value="small"><span class="ant-radio-inner"></span></span><span>small</span></label></div> <br> <br>
  <div class="ant-descriptions ant-descriptions-bordered">
    <div class="ant-descriptions-title">Custom Size</div>
    <div class="ant-descriptions-view">
      <table>
        <tbody>
          <tr class="ant-descriptions-row">
            <th colspan="1" class="ant-descriptions-item-label">Product</th>
            <td colspan="1" class="ant-descriptions-item-content">Cloud Database</td>
            <th colspan="1" class="ant-descriptions-item-label">Billing</th>
            <td colspan="1" class="ant-descriptions-item-content">Prepaid</td>
            <th colspan="1" class="ant-descriptions-item-label">Time</th>
            <td colspan="1" class="ant-descriptions-item-content">18:00:00</td>
          </tr>
          <tr class="ant-descriptions-row">
            <th colspan="1" class="ant-descriptions-item-label">Amount</th>
            <td colspan="1" class="ant-descriptions-item-content">$80.00</td>
            <th colspan="1" class="ant-descriptions-item-label">Discount</th>
            <td colspan="1" class="ant-descriptions-item-content">$20.00</td>
            <th colspan="1" class="ant-descriptions-item-label">Official</th>
            <td colspan="1" class="ant-descriptions-item-content">$60.00</td>
          </tr>
          <tr class="ant-descriptions-row">
            <th colspan="1" class="ant-descriptions-item-label">Config Info</th>
            <td colspan="5" class="ant-descriptions-item-content">
              Data disk type: MongoDB
              <br>
              Database version: 3.4
              <br>
              Package: dds.mongo.mid
              <br>
              Storage space: 10 GB
              <br>
              Replication factor: 3
              <br>
              Region: East China 1<br></td>
          </tr>
        </tbody>
      </table>
    </div>
  </div> <br> <br>
  <div class="ant-descriptions">
    <div class="ant-descriptions-title">Custom Size</div>
    <div class="ant-descriptions-view">
      <table>
        <tbody>
          <tr class="ant-descriptions-row">
            <td colspan="1" class="ant-descriptions-item"><span class="ant-descriptions-item-label">Product</span><span class="ant-descriptions-item-content">Cloud Database</span></td>
            <td colspan="1" class="ant-descriptions-item"><span class="ant-descriptions-item-label">Billing</span><span class="ant-descriptions-item-content">Prepaid</span></td>
            <td colspan="1" class="ant-descriptions-item"><span class="ant-descriptions-item-label">Time</span><span class="ant-descriptions-item-content">18:00:00</span></td>
          </tr>
          <tr class="ant-descriptions-row">
            <td colspan="1" class="ant-descriptions-item"><span class="ant-descriptions-item-label">Amount</span><span class="ant-descriptions-item-content">$80.00</span></td>
            <td colspan="1" class="ant-descriptions-item"><span class="ant-descriptions-item-label">Discount</span><span class="ant-descriptions-item-content">$20.00</span></td>
            <td colspan="1" class="ant-descriptions-item"><span class="ant-descriptions-item-label">Official</span><span class="ant-descriptions-item-content">$60.00</span></td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`renders ./antdv-demo/docs/descriptions/demo/vertical.md correctly 1`] = `
<div class="ant-descriptions">
  <div class="ant-descriptions-title">User Info</div>
  <div class="ant-descriptions-view">
    <table>
      <tbody>
        <tr class="ant-descriptions-row">
          <th colspan="1" class="ant-descriptions-item"><span class="ant-descriptions-item-label">UserName</span></th>
          <th colspan="1" class="ant-descriptions-item"><span class="ant-descriptions-item-label">Telephone</span></th>
          <th colspan="1" class="ant-descriptions-item"><span class="ant-descriptions-item-label">Live</span></th>
        </tr>
        <tr class="ant-descriptions-row">
          <td colspan="1" class="ant-descriptions-item"><span class="ant-descriptions-item-content">Zhou Maomao</span></td>
          <td colspan="1" class="ant-descriptions-item"><span class="ant-descriptions-item-content">1810000000</span></td>
          <td colspan="1" class="ant-descriptions-item"><span class="ant-descriptions-item-content">Hangzhou, Zhejiang</span></td>
        </tr>
        <tr class="ant-descriptions-row">
          <th colspan="2" class="ant-descriptions-item"><span class="ant-descriptions-item-label">Address</span></th>
          <th colspan="1" class="ant-descriptions-item"><span class="ant-descriptions-item-label">Remark</span></th>
        </tr>
        <tr class="ant-descriptions-row">
          <td colspan="2" class="ant-descriptions-item"><span class="ant-descriptions-item-content">
    No. 18, Wantang Road, Xihu District, Hangzhou, Zhejiang, China
  </span></td>
          <td colspan="1" class="ant-descriptions-item"><span class="ant-descriptions-item-content">empty</span></td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders ./antdv-demo/docs/descriptions/demo/vertical-border.md correctly 1`] = `
<div class="ant-descriptions ant-descriptions-bordered">
  <div class="ant-descriptions-title">User Info</div>
  <div class="ant-descriptions-view">
    <table>
      <tbody>
        <tr class="ant-descriptions-row">
          <th colspan="1" class="ant-descriptions-item-label">Product</th>
          <th colspan="1" class="ant-descriptions-item-label">Billing Mode</th>
          <th colspan="1" class="ant-descriptions-item-label">Automatic Renewal</th>
        </tr>
        <tr class="ant-descriptions-row">
          <td colspan="1" class="ant-descriptions-item-content">Cloud Database</td>
          <td colspan="1" class="ant-descriptions-item-content">Prepaid</td>
          <td colspan="1" class="ant-descriptions-item-content">YES</td>
        </tr>
        <tr class="ant-descriptions-row">
          <th colspan="1" class="ant-descriptions-item-label">Order time</th>
          <th colspan="2" class="ant-descriptions-item-label">Usage Time</th>
        </tr>
        <tr class="ant-descriptions-row">
          <td colspan="1" class="ant-descriptions-item-content">2018-04-24 18:00:00</td>
          <td colspan="2" class="ant-descriptions-item-content">
            2019-04-24 18:00:00
          </td>
        </tr>
        <tr class="ant-descriptions-row">
          <th colspan="3" class="ant-descriptions-item-label">Status</th>
        </tr>
        <tr class="ant-descriptions-row">
          <td colspan="3" class="ant-descriptions-item-content"><span class="ant-badge ant-badge-status ant-badge-not-a-wrapper"><span class="ant-badge-status-dot ant-badge-status-processing"></span><span class="ant-badge-status-text">Running</span></span></td>
        </tr>
        <tr class="ant-descriptions-row">
          <th colspan="1" class="ant-descriptions-item-label">Negotiated Amount</th>
          <th colspan="1" class="ant-descriptions-item-label">Discount</th>
          <th colspan="1" class="ant-descriptions-item-label">Official Receipts</th>
        </tr>
        <tr class="ant-descriptions-row">
          <td colspan="1" class="ant-descriptions-item-content">$80.00</td>
          <td colspan="1" class="ant-descriptions-item-content">$20.00</td>
          <td colspan="1" class="ant-descriptions-item-content">$60.00</td>
        </tr>
        <tr class="ant-descriptions-row">
          <th colspan="3" class="ant-descriptions-item-label">Config Info</th>
        </tr>
        <tr class="ant-descriptions-row">
          <td colspan="3" class="ant-descriptions-item-content">
            Data disk type: MongoDB
            <br>
            Database version: 3.4
            <br>
            Package: dds.mongo.mid
            <br>
            Storage space: 10 GB
            <br>
            Replication factor: 3
            <br>
            Region: East China 1<br></td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
